<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>planner_benchmark</name>
    <version>1.17.1</version>
    <description>
        Benchmark for global planner
    </description>
    <author>Trung Kien</author>
    <maintainer email="letrungkien.k53.hut@gmail.com">Trung Kien</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>

    <depend>actionlib</depend>
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>move_base_msgs</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_srvs</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>

    <!--These deps aren't strictly needed, but given the default parameters require them to work, we'll enforce that they build -->
    <depend>base_local_planner</depend>
    <depend>clear_costmap_recovery</depend>
    <depend>navfn</depend>
    <depend>rotate_recovery</depend>

    <exec_depend>message_runtime</exec_depend>

</package>
